@@ -12,6 +12,7 @@ import src.main.scala.licenses.{
   DistributionDescription,
   SBTDistributionComponent
 }
+
 import scala.sys.process._
 
 // This import is unnecessary, but bit adds a proper code completion features
@@ -29,9 +30,9 @@ import java.nio.file.Paths
 
 val scalacVersion = "2.13.15"
 // source version of the Java language
-val javaVersion = "21"
+val javaVersion = "24"
 // version of the GraalVM JDK
-val graalVersion = "21.0.2"
+val graalVersion = "24.0.1"
 // Version used for the Graal/Truffle related Maven packages
 // Keep in sync with GraalVM.version. Do not change the name of this variable,
 // it is used by the Rust build script via regex matching.
@@ -183,7 +184,10 @@ GatherLicenses.distributions := Seq(
     "Microsoft",
     Distribution.sbtProjects(`std-microsoft`)
   ),
-  makeStdLibDistribution("Tableau", Distribution.sbtProjects(`std-tableau`))
+  makeStdLibDistribution(
+    "Tableau",
+    Distribution.sbtProjects(`std-tableau`, `jna-wrapper`)
+  )
 )
 
 GatherLicenses.licenseConfigurations := Set("compile")
@@ -223,6 +227,16 @@ ThisBuild / javacOptions ++= Seq(
   "-g",               // Include debugging information
   "-Xlint:unchecked", // Enable additional warnings
   "-proc:full"        // Annotation processing is enabled
+)
+
+ThisBuild / javaOptions ++= Seq(
+  // Needed for migration from JDK 21 to JDK 24
+  // See https://github.com/oracle/graal/blob/master/sdk/CHANGELOG.md#version-2420
+  "--enable-native-access=org.graalvm.truffle",
+  // Truffle calls terminally deprecated methods from sun.misc.Unsafe in JDK24.
+  // This removes the warnings at runtime.
+  // TODO: Remove this until JDK 26
+  "--sun-misc-unsafe-memory-access=allow"
 )
 
 ThisBuild / scalacOptions ++= Seq(
@@ -294,6 +308,8 @@ lazy val Benchmark = config("bench") extend sbt.Test
 lazy val rebuildNativeImage = taskKey[Unit]("Force to rebuild native image")
 lazy val buildNativeImage =
   taskKey[Unit]("Ensure that the Native Image is built.")
+lazy val checkNativeImageSize =
+  taskKey[Unit]("Ensures the generated Native Image has reasonable size")
 
 // ============================================================================
 // === Global Project =========================================================
@@ -347,6 +363,7 @@ lazy val enso = (project in file("."))
     `persistance`,
     `persistance-dsl`,
     pkg,
+    `poi-wrapper`,
     `polyglot-api`,
     `polyglot-api-macros`,
     `process-utils`,
@@ -602,7 +619,7 @@ val bouncyCastle = Seq(
 val jlineVersion = "3.26.3"
 val jline = Seq(
   "org.jline" % "jline-terminal"     % jlineVersion,
-  "org.jline" % "jline-terminal-jna" % jlineVersion,
+  "org.jline" % "jline-terminal-jni" % jlineVersion, // The terminal provider jna has been deprecated, check your configuration.
   "org.jline" % "jline-reader"       % jlineVersion,
   "org.jline" % "jline-native"       % jlineVersion
 )
@@ -613,6 +630,12 @@ val googleApiServicesSheetsVersion = "v4-rev20250106-2.0.0"
 val googleAnalyticsAdminVersion    = "0.66.0"
 val googleAnalyticsDataVersion     = "0.67.0"
 val grpcVersion                    = "1.69.0"
+
+// === SLF4J ==================================================================
+val slf4jVersion = JPMSUtils.slf4jVersion
+val slf4jApi = Seq(
+  "org.slf4j" % "slf4j-api" % slf4jVersion
+)
 
 // === Other ==================================================================
 
@@ -633,7 +656,6 @@ val scalacticVersion        = "3.2.19"
 val scalaLoggingVersion     = "3.9.4"
 val scalameterVersion       = "0.19"
 val scalatestVersion        = "3.2.19"
-val slf4jVersion            = JPMSUtils.slf4jVersion
 val sqliteVersion           = "3.46.1.0"
 val tikaVersion             = "2.4.1"
 val typesafeConfigVersion   = "1.4.2"
@@ -653,6 +675,7 @@ val googleProtobufVersion   = "3.25.1"
 val shapelessVersion        = "2.3.10"
 val postgresVersion         = "42.4.0"
 val h2Version               = "2.3.232"
+val jimFsVersion            = "1.3.0"
 
 // ============================================================================
 // === Utility methods =====================================================
@@ -664,8 +687,7 @@ lazy val componentModulesIds =
     "Gather all sbt module IDs that will be put on the module-path for the engine runner"
   )
 (ThisBuild / componentModulesIds) := {
-  GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.toolsPkgs ++ helidon ++ logbackPkg ++ Seq(
-    "org.slf4j"        % "slf4j-api"                    % slf4jVersion,
+  GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.toolsPkgs ++ helidon ++ logbackPkg ++ slf4jApi ++ Seq(
     "org.netbeans.api" % "org-netbeans-modules-sampler" % netbeansApiVersion,
     (`runtime-language-arrow` / projectID).value,
     (`syntax-rust-definition` / projectID).value,
@@ -696,6 +718,7 @@ lazy val componentModulesPaths =
     ioSentry ++
     logbackPkg ++
     jline ++
+    slf4jApi ++
     Seq(
       "org.netbeans.api"       % "org-openide-util-lookup"      % netbeansApiVersion,
       "org.netbeans.api"       % "org-netbeans-modules-sampler" % netbeansApiVersion,
@@ -710,7 +733,6 @@ lazy val componentModulesPaths =
       "org.apache.commons"     % "commons-lang3"                % commonsLangVersion,
       "org.apache.commons"     % "commons-compress"             % commonsCompressVersion,
       "org.apache.tika"        % "tika-core"                    % tikaVersion,
-      "org.slf4j"              % "slf4j-api"                    % slf4jVersion,
       "org.yaml"               % "snakeyaml"                    % snakeyamlVersion,
       "com.ibm.icu"            % "icu4j"                        % icuVersion
     )
@@ -743,6 +765,7 @@ lazy val componentModulesPaths =
     (`runtime-instrument-runtime-server` / Compile / exportedModuleBin).value,
     (`runtime-language-arrow` / Compile / exportedModuleBin).value,
     (`runtime-language-epb` / Compile / exportedModuleBin).value,
+    (`runtime-utils` / Compile / exportedModuleBin).value,
     (`runtime-version-manager` / Compile / exportedModuleBin).value,
     (`persistance` / Compile / exportedModuleBin).value,
     (`cli` / Compile / exportedModuleBin).value,
@@ -937,12 +960,8 @@ lazy val `syntax-rust-definition` = project
     Compile / exportJars := true,
     autoScalaLibrary := false,
     crossPaths := false,
-    libraryDependencies ++= Seq(
-      "org.slf4j" % "slf4j-api" % slf4jVersion
-    ),
-    Compile / moduleDependencies ++= Seq(
-      "org.slf4j" % "slf4j-api" % slf4jVersion
-    ),
+    libraryDependencies ++= slf4jApi,
+    Compile / moduleDependencies ++= slf4jApi,
     javaModuleName := "org.enso.syntax",
     Compile / sourceGenerators += generateParserJavaSources,
     Compile / resourceGenerators += generateRustParserLib,
@@ -1020,7 +1039,7 @@ lazy val `profiling-utils` = project
     javaModuleName := "org.enso.profiling",
     Compile / exportJars := true,
     version := "0.1",
-    libraryDependencies ++= Seq(
+    libraryDependencies ++= slf4jApi ++ Seq(
       "org.netbeans.api" % "org-netbeans-modules-sampler" % netbeansApiVersion
       exclude ("org.netbeans.api", "org-openide-loaders")
       exclude ("org.netbeans.api", "org-openide-nodes")
@@ -1034,16 +1053,13 @@ lazy val `profiling-utils` = project
       exclude ("org.netbeans.api", "org-openide-awt")
       exclude ("org.netbeans.api", "org-openide-modules")
       exclude ("org.netbeans.api", "org-netbeans-api-annotations-common"),
-      "org.slf4j"      % "slf4j-api"       % slf4jVersion,
       "junit"          % "junit"           % junitVersion   % Test,
       "com.github.sbt" % "junit-interface" % junitIfVersion % Test
     ),
-    Compile / moduleDependencies ++= {
-      Seq(
-        "org.slf4j"        % "slf4j-api"                    % slf4jVersion,
-        "org.netbeans.api" % "org-netbeans-modules-sampler" % netbeansApiVersion
-      )
-    }
+    Compile / moduleDependencies ++= slf4jApi ++
+    Seq(
+      "org.netbeans.api" % "org-netbeans-modules-sampler" % netbeansApiVersion
+    )
   )
 
 lazy val `logging-utils` = project
@@ -1055,14 +1071,10 @@ lazy val `logging-utils` = project
     scalaModuleDependencySetting,
     compileOrder := CompileOrder.ScalaThenJava, // Note [JPMS Compile order]
     version := "0.1",
-    libraryDependencies ++= Seq(
-      "org.scalatest" %% "scalatest" % scalatestVersion % Test,
-      "org.slf4j"      % "slf4j-api" % slf4jVersion
+    libraryDependencies ++= slf4jApi ++ Seq(
+      "org.scalatest" %% "scalatest" % scalatestVersion % Test
     ) ++ logbackTest,
-    Compile / moduleDependencies ++=
-      Seq(
-        "org.slf4j" % "slf4j-api" % slf4jVersion
-      )
+    Compile / moduleDependencies ++= slf4jApi
   )
 
 lazy val `logging-service` = project
@@ -1073,14 +1085,11 @@ lazy val `logging-service` = project
     frgaalJavaCompilerSetting,
     scalaModuleDependencySetting,
     version := "0.1",
-    libraryDependencies ++= Seq(
-      "org.slf4j"      % "slf4j-api" % slf4jVersion,
+    libraryDependencies ++= slf4jApi ++ Seq(
       "com.typesafe"   % "config"    % typesafeConfigVersion,
       "org.scalatest" %% "scalatest" % scalatestVersion % Test
     ),
-    Compile / moduleDependencies ++= Seq(
-      "org.slf4j" % "slf4j-api" % slf4jVersion
-    ),
+    Compile / moduleDependencies ++= slf4jApi,
     Compile / internalModuleDependencies := Seq(
       (`logging-config` / Compile / exportedModule).value,
       (`logging-utils` / Compile / exportedModule).value
@@ -1113,13 +1122,11 @@ lazy val `logging-service-logback` = project
   .settings(
     frgaalJavaCompilerSetting,
     version := "0.1",
-    libraryDependencies ++= Seq(
-      "org.slf4j"        % "slf4j-api"               % slf4jVersion,
+    libraryDependencies ++= slf4jApi ++ Seq(
       "org.scalatest"   %% "scalatest"               % scalatestVersion   % Test,
       "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion % "provided"
     ) ++ logbackPkg ++ ioSentry,
-    Compile / moduleDependencies ++= logbackPkg ++ ioSentry ++ Seq(
-      "org.slf4j"        % "slf4j-api"               % slf4jVersion,
+    Compile / moduleDependencies ++= logbackPkg ++ ioSentry ++ slf4jApi ++ Seq(
       "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion % "provided"
     ),
     Compile / javaModuleName := "org.enso.logging.service.logback",
@@ -1150,8 +1157,7 @@ lazy val `logging-service-telemetry` = project
     version := "0.1",
     commands += WithDebugCommand.withDebug,
     Test / fork := true,
-    libraryDependencies ++= Seq(
-      "org.slf4j"                              % "slf4j-api"               % slf4jVersion,
+    libraryDependencies ++= slf4jApi ++ Seq(
       "com.github.plokhotnyuk.jsoniter-scala" %% "jsoniter-scala-macros"   % jsoniterVersion,
       "com.github.plokhotnyuk.jsoniter-scala" %% "jsoniter-scala-core"     % jsoniterVersion,
       "org.netbeans.api"                       % "org-openide-util-lookup" % netbeansApiVersion % "provided",
@@ -1163,8 +1169,7 @@ lazy val `logging-service-telemetry` = project
       "com.fasterxml.jackson.core"             % "jackson-databind"        % jacksonVersion     % Test
     ),
     Compile / javaModuleName := "org.enso.logging.service.telemetry",
-    Compile / moduleDependencies ++= logbackPkg ++ Seq(
-      "org.slf4j"        % "slf4j-api"               % slf4jVersion,
+    Compile / moduleDependencies ++= logbackPkg ++ slf4jApi ++ Seq(
       "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion
     ),
     Compile / internalModuleDependencies ++= Seq(
@@ -1185,14 +1190,10 @@ lazy val `logging-utils-akka` = project
     scalaModuleDependencySetting,
     version := "0.1",
     compileOrder := CompileOrder.ScalaThenJava,
-    libraryDependencies ++= Seq(
-      "org.slf4j"          % "slf4j-api"  % slf4jVersion,
+    libraryDependencies ++= slf4jApi ++ Seq(
       "com.typesafe.akka" %% "akka-actor" % akkaVersion
     ),
-    Compile / moduleDependencies ++=
-      Seq(
-        "org.slf4j" % "slf4j-api" % slf4jVersion
-      ),
+    Compile / moduleDependencies ++= slf4jApi,
     Compile / internalModuleDependencies := Seq(
       (`akka-wrapper` / Compile / exportedModule).value
     )
@@ -1207,15 +1208,11 @@ lazy val filewatcher = project
     scalaModuleDependencySetting,
     compileOrder := CompileOrder.ScalaThenJava,
     version := "0.1",
-    libraryDependencies ++= Seq(
-      "io.methvin"     % "directory-watcher" % directoryWatcherVersion,
-      "commons-io"     % "commons-io"        % commonsIoVersion,
-      "org.slf4j"      % "slf4j-api"         % slf4jVersion,
-      "org.scalatest" %% "scalatest"         % scalatestVersion % Test
+    libraryDependencies ++= slf4jApi ++ Seq(
+      "commons-io"     % "commons-io" % commonsIoVersion,
+      "org.scalatest" %% "scalatest"  % scalatestVersion % Test
     ),
-    Compile / moduleDependencies ++= Seq(
-      "org.slf4j" % "slf4j-api" % slf4jVersion
-    ),
+    Compile / moduleDependencies ++= slf4jApi,
     Compile / internalModuleDependencies := Seq(
       (`directory-watcher-wrapper` / Compile / exportedModule).value
     ),
@@ -1225,14 +1222,14 @@ lazy val filewatcher = project
   .dependsOn(testkit % Test)
   .dependsOn(`logging-service-logback` % "test->test")
   .dependsOn(`directory-watcher-wrapper`)
+  .dependsOn(`jna-wrapper` % Test)
 
 lazy val `logging-truffle-connector` = project
   .in(file("lib/scala/logging-truffle-connector"))
   .settings(
     frgaalJavaCompilerSetting,
     version := "0.1",
-    libraryDependencies ++= Seq(
-      "org.slf4j"           % "slf4j-api"               % slf4jVersion,
+    libraryDependencies ++= slf4jApi ++ Seq(
       "org.graalvm.truffle" % "truffle-api"             % graalMavenPackagesVersion % "provided",
       "org.netbeans.api"    % "org-openide-util-lookup" % netbeansApiVersion        % "provided"
     )
@@ -1257,12 +1254,10 @@ lazy val `scala-libs-wrapper` = project
     modularFatJarWrapperSettings,
     scalaModuleDependencySetting,
     javaModuleName := "org.enso.scala.wrapper",
-    libraryDependencies ++= circe ++ scalaReflect ++ Seq(
+    libraryDependencies ++= circe ++ scalaReflect ++ slf4jApi ++ Seq(
       "com.typesafe.scala-logging"            %% "scala-logging"         % scalaLoggingVersion,
-      "org.slf4j"                              % "slf4j-api"             % slf4jVersion,
       "org.typelevel"                         %% "cats-core"             % catsVersion,
-      "com.github.plokhotnyuk.jsoniter-scala" %% "jsoniter-scala-macros" % jsoniterVersion,
-      "net.java.dev.jna"                       % "jna"                   % jnaVersion
+      "com.github.plokhotnyuk.jsoniter-scala" %% "jsoniter-scala-macros" % jsoniterVersion
     ),
     Compile / moduleDependencies ++= scalaLibrary ++ scalaReflect ++ Seq(
       "org.slf4j" % "slf4j-api" % slf4jVersion
@@ -1272,10 +1267,7 @@ lazy val `scala-libs-wrapper` = project
         (Compile / fullClasspath).value,
         scalaLibrary ++
         scalaReflect ++
-        Seq(
-          "org.slf4j"        % "slf4j-api" % slf4jVersion,
-          "net.java.dev.jna" % "jna"       % jnaVersion
-        ),
+        slf4jApi,
         streams.value.log,
         moduleName.value,
         scalaBinaryVersion.value,
@@ -1387,7 +1379,33 @@ lazy val `jna-wrapper` = project
       Map(
         javaModuleName.value -> jna
       )
+    },
+    assemblyMergeStrategy := { case _ =>
+      MergeStrategy.preferProject
     }
+  )
+
+lazy val `poi-wrapper` = project
+  .in(file("lib/java/poi-wrapper"))
+  .settings(
+    frgaalJavaCompilerSetting,
+    version := "0.1",
+    autoScalaLibrary := false,
+    libraryDependencies ++= Seq(
+      "org.apache.poi" % "poi-ooxml" % poiOoxmlVersion
+    ),
+    assemblyMergeStrategy := { case _ =>
+      MergeStrategy.preferProject
+    }
+  )
+
+lazy val `runtime-utils` = project
+  .in(file("lib/java/runtime-utils"))
+  .enablePlugins(JPMSPlugin)
+  .settings(
+    frgaalJavaCompilerSetting,
+    scalaModuleDependencySetting,
+    javaModuleName := "org.enso.runtime.utils"
   )
 
 lazy val `directory-watcher-wrapper` = project
@@ -1396,29 +1414,22 @@ lazy val `directory-watcher-wrapper` = project
   .settings(
     modularFatJarWrapperSettings,
     scalaModuleDependencySetting,
-    libraryDependencies ++= Seq(
-      "io.methvin"       % "directory-watcher" % directoryWatcherVersion,
-      "org.slf4j"        % "slf4j-api"         % "1.7.36",
-      "net.java.dev.jna" % "jna"               % jnaVersion
+    libraryDependencies ++= slf4jApi ++ Seq(
+      "io.methvin" % "directory-watcher" % directoryWatcherVersion exclude ("net.java.dev.jna", "jna")
     ),
     javaModuleName := "org.enso.directory.watcher.wrapper",
     assembly / assemblyExcludedJars := {
       JPMSUtils.filterModulesFromClasspath(
         (Compile / dependencyClasspath).value,
         scalaLibrary ++
-        Seq(
-          "org.slf4j"        % "slf4j-api" % "1.7.36",
-          "net.java.dev.jna" % "jna"       % jnaVersion
-        ),
+        slf4jApi,
         streams.value.log,
         moduleName.value,
         scalaBinaryVersion.value,
         shouldContainAll = true
       )
     },
-    Compile / moduleDependencies ++= Seq(
-      "org.slf4j" % "slf4j-api" % "1.7.36"
-    ),
+    Compile / moduleDependencies ++= slf4jApi,
     Compile / internalModuleDependencies := Seq(
       (`jna-wrapper` / Compile / exportedModule).value
     ),
@@ -1439,6 +1450,7 @@ lazy val `directory-watcher-wrapper` = project
       )
     }
   )
+  .dependsOn(`jna-wrapper` % "provided")
 
 lazy val `fansi-wrapper` = project
   .in(file("lib/java/fansi-wrapper"))
@@ -1486,7 +1498,7 @@ lazy val `akka-wrapper` = project
   .settings(
     modularFatJarWrapperSettings,
     scalaModuleDependencySetting,
-    libraryDependencies ++= akka ++ scalaLibrary ++ scalaReflect ++ Seq(
+    libraryDependencies ++= akka ++ scalaLibrary ++ scalaReflect ++ slf4jApi ++ Seq(
       "org.scala-lang.modules"   %% "scala-parser-combinators" % scalaParserCombinatorsVersion,
       "org.scala-lang.modules"   %% "scala-java8-compat"       % scalaJavaCompatVersion,
       akkaURL                    %% "akka-http"                % akkaHTTPVersion,
@@ -1496,30 +1508,28 @@ lazy val `akka-wrapper` = project
       akkaURL                    %% "akka-protobuf-v3"         % akkaVersion,
       akkaURL                    %% "akka-http-spray-json"     % akkaHTTPVersion,
       "com.typesafe"              % "config"                   % typesafeConfigVersion,
-      "org.slf4j"                 % "slf4j-api"                % slf4jVersion,
       "com.google.protobuf"       % "protobuf-java"            % googleProtobufVersion,
       "io.github.java-diff-utils" % "java-diff-utils"          % javaDiffVersion,
       "org.reactivestreams"       % "reactive-streams"         % reactiveStreamsVersion,
-      "net.java.dev.jna"          % "jna"                      % jnaVersion,
       "io.spray"                 %% "spray-json"               % sprayJsonVersion
     ),
     javaModuleName := "org.enso.akka.wrapper",
-    Compile / moduleDependencies ++= Seq(
+    Compile / moduleDependencies ++= slf4jApi ++ Seq(
       "com.google.protobuf" % "protobuf-java"    % googleProtobufVersion,
-      "org.reactivestreams" % "reactive-streams" % reactiveStreamsVersion,
-      "org.slf4j"           % "slf4j-api"        % slf4jVersion
+      "org.reactivestreams" % "reactive-streams" % reactiveStreamsVersion
+    ),
+    Compile / internalModuleDependencies := Seq(
+      (`jna-wrapper` / Compile / exportedModule).value
     ),
     assembly / assemblyExcludedJars := {
       val excludedJars = JPMSUtils.filterModulesFromUpdate(
         update.value,
-        scalaLibrary ++ scalaReflect ++ Seq(
+        scalaLibrary ++ scalaReflect ++ slf4jApi ++ Seq(
           "org.scala-lang.modules"   %% "scala-java8-compat" % scalaJavaCompatVersion,
-          "org.slf4j"                 % "slf4j-api"          % slf4jVersion,
           "com.typesafe"              % "config"             % typesafeConfigVersion,
           "io.github.java-diff-utils" % "java-diff-utils"    % javaDiffVersion,
           "com.google.protobuf"       % "protobuf-java"      % googleProtobufVersion,
-          "org.reactivestreams"       % "reactive-streams"   % reactiveStreamsVersion,
-          "net.java.dev.jna"          % "jna"                % jnaVersion
+          "org.reactivestreams"       % "reactive-streams"   % reactiveStreamsVersion
         ),
         streams.value.log,
         moduleName.value,
@@ -1556,6 +1566,7 @@ lazy val `akka-wrapper` = project
       )
     }
   )
+  .dependsOn(`jna-wrapper` % "provided")
 
 lazy val `zio-wrapper` = project
   .in(file("lib/java/zio-wrapper"))
@@ -1633,6 +1644,7 @@ lazy val `task-progress-notifications` = project
   .enablePlugins(JPMSPlugin)
   .configs(Test)
   .settings(
+    frgaalJavaCompilerSetting,
     scalaModuleDependencySetting,
     version := "0.1",
     compileOrder := CompileOrder.ScalaThenJava,
@@ -1780,8 +1792,7 @@ lazy val `project-manager` = (project in file("lib/scala/project-manager"))
       (`ydoc-polyfill` / javaModuleName).value
     ),
     Test / moduleDependencies := {
-      GraalVM.modules ++ GraalVM.langsPkgs ++ logbackPkg ++ helidon ++ Seq(
-        "org.slf4j"        % "slf4j-api"                    % slf4jVersion,
+      GraalVM.modules ++ GraalVM.langsPkgs ++ logbackPkg ++ helidon ++ slf4jApi ++ Seq(
         "org.netbeans.api" % "org-netbeans-modules-sampler" % netbeansApiVersion
       )
     },
@@ -1848,12 +1859,10 @@ lazy val `json-rpc-server` = project
     frgaalJavaCompilerSetting,
     scalaModuleDependencySetting,
     compileOrder := CompileOrder.ScalaThenJava,
-    libraryDependencies ++= akka ++ logbackTest,
-    libraryDependencies ++= circe,
+    libraryDependencies ++= akka ++ logbackTest ++ circe ++ slf4jApi,
     libraryDependencies ++= Seq(
       "io.circe"                   %% "circe-literal"   % circeVersion,
       "com.typesafe.scala-logging" %% "scala-logging"   % scalaLoggingVersion,
-      "org.slf4j"                   % "slf4j-api"       % slf4jVersion,
       akkaTestkit                   % Test,
       "org.scalatest"              %% "scalatest"       % scalatestVersion      % Test,
       "junit"                       % "junit"           % junitVersion          % Test,
@@ -1863,15 +1872,13 @@ lazy val `json-rpc-server` = project
       "commons-io"                  % "commons-io"      % commonsIoVersion      % Test,
       "org.gnieh"                  %% "diffson-circe"   % diffsonVersion        % Test
     ),
-    Compile / moduleDependencies ++=
-      Seq(
-        "org.slf4j" % "slf4j-api" % slf4jVersion
-      ),
+    Compile / moduleDependencies ++= slf4jApi,
     Compile / internalModuleDependencies := Seq(
       (`scala-libs-wrapper` / Compile / exportedModule).value,
       (`akka-wrapper` / Compile / exportedModule).value
     )
   )
+  .dependsOn(`runtime-utils` % "test->compile")
 
 // An automatic JPMS module
 lazy val testkit = project
@@ -1881,13 +1888,12 @@ lazy val testkit = project
     frgaalJavaCompilerSetting,
     compileOrder := CompileOrder.ScalaThenJava,
     javaModuleName := "org.enso.testkit",
-    libraryDependencies ++= logbackPkg ++ Seq(
+    libraryDependencies ++= logbackPkg ++ slf4jApi ++ Seq(
       "org.apache.commons" % "commons-lang3"   % commonsLangVersion,
       "commons-io"         % "commons-io"      % commonsIoVersion,
       "org.scalatest"     %% "scalatest"       % scalatestVersion,
       "junit"              % "junit"           % junitVersion,
-      "com.github.sbt"     % "junit-interface" % junitIfVersion,
-      "org.slf4j"          % "slf4j-api"       % slf4jVersion
+      "com.github.sbt"     % "junit-interface" % junitIfVersion
     ),
     packageOptions := Seq(
       Package.ManifestAttributes(
@@ -1901,6 +1907,7 @@ lazy val testkit = project
     Compile / exportedModuleBin := (Compile / packageBin).value
   )
   .dependsOn(`logging-service-logback`)
+  .dependsOn(`runtime-utils`)
 
 lazy val searcher = project
   .in(file("lib/scala/searcher"))
@@ -1938,19 +1945,15 @@ lazy val `ydoc-polyfill` = project
     autoScalaLibrary := false,
     Test / fork := true,
     commands += WithDebugCommand.withDebug,
-    Compile / moduleDependencies ++= {
-      GraalVM.modules ++ GraalVM.jsPkgs ++ GraalVM.chromeInspectorPkgs ++ helidon ++ Seq(
-        "org.slf4j" % "slf4j-api" % slf4jVersion
-      )
-    },
+    Compile / moduleDependencies ++=
+      GraalVM.modules ++ GraalVM.jsPkgs ++ GraalVM.chromeInspectorPkgs ++ helidon ++ slf4jApi,
     Compile / internalModuleDependencies := Seq(
       (`syntax-rust-definition` / Compile / exportedModule).value
     ),
-    libraryDependencies ++= Seq(
+    libraryDependencies ++= slf4jApi ++ Seq(
       "org.graalvm.truffle"  % "truffle-api"                 % graalMavenPackagesVersion % "provided",
       "org.graalvm.polyglot" % "inspect-community"           % graalMavenPackagesVersion % "runtime",
       "org.graalvm.polyglot" % "js-community"                % graalMavenPackagesVersion % "runtime",
-      "org.slf4j"            % "slf4j-api"                   % slf4jVersion,
       "io.helidon.webclient" % "helidon-webclient-websocket" % helidonVersion,
       "io.helidon.webserver" % "helidon-webserver-websocket" % helidonVersion,
       "junit"                % "junit"                       % junitVersion              % Test,
@@ -1975,21 +1978,17 @@ lazy val `ydoc-server` = project
     autoScalaLibrary := false,
     Test / fork := true,
     commands += WithDebugCommand.withDebug,
-    Compile / moduleDependencies ++= {
-      GraalVM.modules ++ GraalVM.jsPkgs ++ GraalVM.chromeInspectorPkgs ++ helidon ++ logbackPkg ++ Seq(
-        "org.slf4j" % "slf4j-api" % slf4jVersion
-      )
-    },
+    Compile / moduleDependencies ++=
+      GraalVM.modules ++ GraalVM.jsPkgs ++ GraalVM.chromeInspectorPkgs ++ helidon ++ logbackPkg ++ slf4jApi,
     Compile / internalModuleDependencies := Seq(
       (`ydoc-polyfill` / Compile / exportedModule).value,
       (`syntax-rust-definition` / Compile / exportedModule).value
     ),
-    libraryDependencies ++= Seq(
+    libraryDependencies ++= slf4jApi ++ Seq(
       "org.graalvm.truffle"        % "truffle-api"                 % graalMavenPackagesVersion % "provided",
       "org.graalvm.sdk"            % "nativeimage"                 % graalMavenPackagesVersion % "provided",
       "org.graalvm.polyglot"       % "inspect-community"           % graalMavenPackagesVersion % "runtime",
       "org.graalvm.polyglot"       % "js-community"                % graalMavenPackagesVersion % "runtime",
-      "org.slf4j"                  % "slf4j-api"                   % slf4jVersion,
       "io.helidon.common"          % "helidon-common"              % helidonVersion,
       "io.helidon.webclient"       % "helidon-webclient-websocket" % helidonVersion            % Test,
       "io.helidon.webserver"       % "helidon-webserver-websocket" % helidonVersion            % Test,
@@ -2075,14 +2074,12 @@ lazy val `persistance` = (project in file("lib/java/persistance"))
     crossPaths := false,
     Compile / javacOptions := ((Compile / javacOptions).value),
     inConfig(Compile)(truffleRunOptionsSettings),
-    libraryDependencies ++= Seq(
-      "org.slf4j"        % "slf4j-api"               % slf4jVersion,
+    libraryDependencies ++= slf4jApi ++ Seq(
       "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion,
       "junit"            % "junit"                   % junitVersion   % Test,
       "com.github.sbt"   % "junit-interface"         % junitIfVersion % Test
     ),
-    Compile / moduleDependencies ++= Seq(
-      "org.slf4j"        % "slf4j-api"               % slf4jVersion,
+    Compile / moduleDependencies ++= slf4jApi ++ Seq(
       "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion
     )
   )
@@ -2208,14 +2205,12 @@ lazy val `engine-common` = project
       "org.graalvm.sdk"      % "nativeimage" % graalMavenPackagesVersion % "provided",
       "org.graalvm.polyglot" % "polyglot"    % graalMavenPackagesVersion % "provided"
     ),
-    Compile / moduleDependencies ++= {
-      Seq(
-        "org.graalvm.sdk"      % "nativeimage" % graalMavenPackagesVersion,
-        "org.graalvm.sdk"      % "word"        % graalMavenPackagesVersion,
-        "org.graalvm.polyglot" % "polyglot"    % graalMavenPackagesVersion,
-        "org.slf4j"            % "slf4j-api"   % slf4jVersion
-      )
-    },
+    Compile / moduleDependencies ++= slf4jApi ++
+    Seq(
+      "org.graalvm.sdk"      % "nativeimage" % graalMavenPackagesVersion,
+      "org.graalvm.sdk"      % "word"        % graalMavenPackagesVersion,
+      "org.graalvm.polyglot" % "polyglot"    % graalMavenPackagesVersion
+    ),
     Compile / internalModuleDependencies := Seq(
       (`logging-utils` / Compile / exportedModule).value,
       (`logging-config` / Compile / exportedModule).value
@@ -2224,6 +2219,7 @@ lazy val `engine-common` = project
   .dependsOn(`logging-config`)
   .dependsOn(`logging-utils`)
   .dependsOn(testkit % Test)
+  .dependsOn(`edition-updater` % "test->compile")
 
 lazy val `polyglot-api` = project
   .in(file("engine/polyglot-api"))
@@ -2300,8 +2296,9 @@ lazy val `language-server` = (project in file("engine/language-server"))
     frgaalJavaCompilerSetting,
     scalaModuleDependencySetting,
     mixedJavaScalaProjectSetting,
-    libraryDependencies ++= akka ++ circe ++ bouncyCastle.map(_ % Test) ++ Seq(
-      "org.slf4j"                   % "slf4j-api"            % slf4jVersion,
+    libraryDependencies ++= akka ++ circe ++ bouncyCastle.map(
+      _ % Test
+    ) ++ slf4jApi ++ Seq(
       "com.typesafe.scala-logging" %% "scala-logging"        % scalaLoggingVersion,
       "io.circe"                   %% "circe-generic-extras" % circeGenericExtrasVersion,
       "io.circe"                   %% "circe-literal"        % circeVersion,
@@ -2321,16 +2318,15 @@ lazy val `language-server` = (project in file("engine/language-server"))
       "org.apache.tika"     % "tika-core"               % tikaVersion               % Test
     ),
     javaModuleName := "org.enso.language.server",
-    Compile / moduleDependencies ++=
-      Seq(
-        "org.graalvm.polyglot"   % "polyglot"                % graalMavenPackagesVersion,
-        "org.slf4j"              % "slf4j-api"               % slf4jVersion,
-        "commons-cli"            % "commons-cli"             % commonsCliVersion,
-        "commons-io"             % "commons-io"              % commonsIoVersion,
-        "com.google.flatbuffers" % "flatbuffers-java"        % flatbuffersVersion,
-        "org.eclipse.jgit"       % "org.eclipse.jgit"        % jgitVersion,
-        "org.netbeans.api"       % "org-openide-util-lookup" % netbeansApiVersion
-      ),
+    Compile / moduleDependencies ++= slf4jApi ++
+    Seq(
+      "org.graalvm.polyglot"   % "polyglot"                % graalMavenPackagesVersion,
+      "commons-cli"            % "commons-cli"             % commonsCliVersion,
+      "commons-io"             % "commons-io"              % commonsIoVersion,
+      "com.google.flatbuffers" % "flatbuffers-java"        % flatbuffersVersion,
+      "org.eclipse.jgit"       % "org.eclipse.jgit"        % jgitVersion,
+      "org.netbeans.api"       % "org-openide-util-lookup" % netbeansApiVersion
+    ),
     Compile / internalModuleDependencies := Seq(
       (`akka-wrapper` / Compile / exportedModule).value,
       (`zio-wrapper` / Compile / exportedModule).value,
@@ -2399,8 +2395,7 @@ lazy val `language-server` = (project in file("engine/language-server"))
       "com.ibm.icu"            % "icu4j"                        % icuVersion             % Test
     ),
     Test / moduleDependencies := {
-      GraalVM.modules ++ GraalVM.langsPkgs ++ logbackPkg ++ helidon ++ ioSentry ++ bouncyCastle ++ scalaLibrary ++ scalaReflect ++ Seq(
-        "org.slf4j"              % "slf4j-api"                    % slf4jVersion,
+      GraalVM.modules ++ GraalVM.langsPkgs ++ logbackPkg ++ helidon ++ ioSentry ++ bouncyCastle ++ scalaLibrary ++ scalaReflect ++ slf4jApi ++ Seq(
         "org.netbeans.api"       % "org-netbeans-modules-sampler" % netbeansApiVersion,
         "com.google.flatbuffers" % "flatbuffers-java"             % flatbuffersVersion,
         "org.yaml"               % "snakeyaml"                    % snakeyamlVersion,
@@ -2423,6 +2418,7 @@ lazy val `language-server` = (project in file("engine/language-server"))
       (`runtime-instrument-repl-debugger` / Compile / exportedModule).value,
       (`runtime-instrument-id-execution` / Compile / exportedModule).value,
       (`runtime-language-epb` / Compile / exportedModule).value,
+      (`runtime-utils` / Compile / exportedModule).value,
       (`ydoc-polyfill` / Compile / exportedModule).value,
       (`syntax-rust-definition` / Compile / exportedModule).value,
       (`profiling-utils` / Compile / exportedModule).value,
@@ -2581,7 +2577,11 @@ lazy val annotationProcSetting = Seq(
   // See https://stackoverflow.com/questions/55558849/how-do-i-build-a-mixed-java-scala-project-which-uses-java-annotation-code-genera
   Compile / logManager :=
     sbt.internal.util.CustomLogManager.excludeMsg(
-      "Could not determine source for class ",
+      List(
+        "Could not determine source for class ",
+        "javac: File for type",
+        "Could not determine source for class module-info"
+      ),
       Level.Warn
     )
 )
@@ -2666,9 +2666,13 @@ def customFrgaalJavaCompilerSettings(targetJdk: String) = {
     // Ensure that our tooling uses the right Java version for checking the code.
     Compile / javacOptions ++= Seq(
       "-source",
-      frgaalSourceLevel,
-      "--enable-preview"
-    )
+      frgaalSourceLevel
+    ) ++
+    (if (Integer.parseInt(targetJdk) <= 21) {
+       Seq("--enable-preview")
+     } else {
+       Seq("-target", "21")
+     })
   )
 }
 
@@ -2712,7 +2716,8 @@ lazy val `runtime-language-epb` =
         "org.graalvm.sdk"      % "nativeimage" % graalMavenPackagesVersion
       ),
       Compile / internalModuleDependencies := Seq(
-        (`ydoc-polyfill` / Compile / exportedModule).value
+        (`ydoc-polyfill` / Compile / exportedModule).value,
+        (`runtime-utils` / Compile / exportedModule).value
       )
     )
 
@@ -2725,11 +2730,10 @@ lazy val `runtime-language-arrow` =
       javaModuleName := "org.enso.interpreter.arrow",
       inConfig(Compile)(truffleRunOptionsSettings),
       instrumentationSettings,
-      libraryDependencies ++= GraalVM.modules ++ Seq(
+      libraryDependencies ++= GraalVM.modules ++ slf4jApi.map(_ % Test) ++ Seq(
         "junit"            % "junit"              % junitVersion       % Test,
         "com.github.sbt"   % "junit-interface"    % junitIfVersion     % Test,
         "org.slf4j"        % "slf4j-nop"          % slf4jVersion       % Test,
-        "org.slf4j"        % "slf4j-api"          % slf4jVersion       % Test,
         "org.apache.arrow" % "arrow-vector"       % apacheArrowVersion % Test,
         "org.apache.arrow" % "arrow-memory-netty" % apacheArrowVersion % Test
       ),
@@ -2792,23 +2796,22 @@ lazy val runtime = (project in file("engine/runtime"))
     version := ensoVersion,
     commands += WithDebugCommand.withDebug,
     inConfig(Compile)(truffleRunOptionsSettings),
-    libraryDependencies ++= Seq(
-      "org.apache.commons"   % "commons-lang3"           % commonsLangVersion,
-      "org.apache.tika"      % "tika-core"               % tikaVersion,
-      "com.lihaoyi"         %% "fansi"                   % fansiVersion,
-      "org.graalvm.polyglot" % "polyglot"                % graalMavenPackagesVersion % "provided",
-      "org.graalvm.sdk"      % "polyglot-tck"            % graalMavenPackagesVersion % "provided",
-      "org.graalvm.truffle"  % "truffle-api"             % graalMavenPackagesVersion % "provided",
-      "org.graalvm.truffle"  % "truffle-dsl-processor"   % graalMavenPackagesVersion % "provided",
-      "org.graalvm.regex"    % "regex"                   % graalMavenPackagesVersion % "provided",
-      "org.netbeans.api"     % "org-openide-util-lookup" % netbeansApiVersion        % "provided",
-      "org.scalacheck"      %% "scalacheck"              % scalacheckVersion         % Test,
-      "org.scalactic"       %% "scalactic"               % scalacticVersion          % Test,
-      "org.scalatest"       %% "scalatest"               % scalatestVersion          % Test,
-      "junit"                % "junit"                   % junitVersion              % Test,
-      "com.github.sbt"       % "junit-interface"         % junitIfVersion            % Test,
-      "org.hamcrest"         % "hamcrest-all"            % hamcrestVersion           % Test,
-      "org.slf4j"            % "slf4j-api"               % slf4jVersion              % Test
+    libraryDependencies ++= slf4jApi.map(_ % Test) ++ Seq(
+      "org.apache.commons"                 % "commons-lang3"           % commonsLangVersion,
+      "org.apache.tika"                    % "tika-core"               % tikaVersion,
+      "com.lihaoyi"                       %% "fansi"                   % fansiVersion,
+      "org.graalvm.polyglot"               % "polyglot"                % graalMavenPackagesVersion % "provided",
+      "org.graalvm.sdk"                    % "polyglot-tck"            % graalMavenPackagesVersion % "provided",
+      "org.graalvm.truffle"                % "truffle-api"             % graalMavenPackagesVersion % "provided",
+      "org.graalvm.truffle"                % "truffle-dsl-processor"   % graalMavenPackagesVersion % "provided",
+      "org.graalvm.regex"                  % "regex"                   % graalMavenPackagesVersion % "provided",
+      "org.netbeans.api"                   % "org-openide-util-lookup" % netbeansApiVersion        % "provided",
+      "org.scalacheck"                    %% "scalacheck"              % scalacheckVersion         % Test,
+      "org.scalactic"                     %% "scalactic"               % scalacticVersion          % Test,
+      "org.scalatest"                     %% "scalatest"               % scalatestVersion          % Test,
+      "junit"                              % "junit"                   % junitVersion              % Test,
+      "com.github.sbt"                     % "junit-interface"         % junitIfVersion            % Test,
+      "org.hamcrest"                       % "hamcrest-all"            % hamcrestVersion           % Test
     ),
     // Add all GraalVM packages with Runtime scope - we don't need them for compilation,
     // just provide them at runtime (in module-path).
@@ -2822,10 +2825,9 @@ lazy val runtime = (project in file("engine/runtime"))
       necessaryModules ++ langs ++ tools
     },
     javaModuleName := "org.enso.runtime",
-    Compile / moduleDependencies ++= Seq(
+    Compile / moduleDependencies ++= slf4jApi ++ Seq(
       "org.netbeans.api"     % "org-openide-util-lookup" % netbeansApiVersion,
       "org.apache.tika"      % "tika-core"               % tikaVersion,
-      "org.slf4j"            % "slf4j-api"               % slf4jVersion,
       "org.graalvm.truffle"  % "truffle-api"             % graalMavenPackagesVersion,
       "org.graalvm.polyglot" % "polyglot"                % graalMavenPackagesVersion,
       "org.graalvm.sdk"      % "collections"             % graalMavenPackagesVersion,
@@ -2912,7 +2914,7 @@ lazy val `runtime-integration-tests` =
       frgaalJavaCompilerSetting,
       annotationProcSetting,
       commands += WithDebugCommand.withDebug,
-      libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ helidon ++ Seq(
+      libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ helidon ++ slf4jApi ++ Seq(
         "org.graalvm.polyglot"       % "polyglot"                     % graalMavenPackagesVersion % "provided",
         "org.graalvm.sdk"            % "polyglot-tck"                 % graalMavenPackagesVersion % "provided",
         "org.graalvm.truffle"        % "truffle-api"                  % graalMavenPackagesVersion % "provided",
@@ -2931,8 +2933,7 @@ lazy val `runtime-integration-tests` =
         "com.fasterxml.jackson.core" % "jackson-core"                 % jacksonVersion            % Test,
         "com.fasterxml.jackson.core" % "jackson-annotations"          % jacksonVersion            % Test,
         "com.fasterxml.jackson.core" % "jackson-databind"             % jacksonVersion            % Test,
-        "org.yaml"                   % "snakeyaml"                    % snakeyamlVersion,
-        "org.slf4j"                  % "slf4j-api"                    % slf4jVersion
+        "org.yaml"                   % "snakeyaml"                    % snakeyamlVersion
       ),
       Test / fork := true,
       Test / parallelExecution := false,
@@ -2950,12 +2951,11 @@ lazy val `runtime-integration-tests` =
       ),
       Test / javaOptions ++= testLogProviderOptions,
       Test / moduleDependencies := {
-        GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ helidon ++ ioSentry ++ scalaLibrary ++ scalaReflect ++ Seq(
+        GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ helidon ++ ioSentry ++ scalaLibrary ++ scalaReflect ++ slf4jApi ++ Seq(
           "org.apache.commons"     % "commons-lang3"                % commonsLangVersion,
           "org.apache.commons"     % "commons-compress"             % commonsCompressVersion,
           "commons-io"             % "commons-io"                   % commonsIoVersion,
           "org.apache.tika"        % "tika-core"                    % tikaVersion,
-          "org.slf4j"              % "slf4j-api"                    % slf4jVersion,
           "org.netbeans.api"       % "org-openide-util-lookup"      % netbeansApiVersion,
           "org.netbeans.api"       % "org-netbeans-modules-sampler" % netbeansApiVersion,
           "org.graalvm.sdk"        % "polyglot-tck"                 % graalMavenPackagesVersion,
@@ -2990,6 +2990,7 @@ lazy val `runtime-integration-tests` =
         (`runtime-compiler` / Compile / exportedModule).value,
         (`runtime-compiler-dump` / Compile / exportedModule).value,
         (`runtime-compiler-dump-igv` / Compile / exportedModule).value,
+        (`runtime-utils` / Compile / exportedModule).value,
         (`polyglot-api` / Compile / exportedModule).value,
         (`polyglot-api-macros` / Compile / exportedModule).value,
         (`pkg` / Compile / exportedModule).value,
@@ -3041,6 +3042,7 @@ lazy val `runtime-integration-tests` =
         (`runtime-test-instruments` / javaModuleName).value,
         (`ydoc-polyfill` / javaModuleName).value,
         (`runtime-instrument-common` / javaModuleName).value,
+        (`runtime-utils` / javaModuleName).value,
         (`text-buffer` / javaModuleName).value,
         (`logging-service-logback` / Test / javaModuleName).value,
         (`logging-service-telemetry` / Compile / javaModuleName).value,
@@ -3074,7 +3076,7 @@ lazy val `runtime-integration-tests` =
         // Add necessary exports for IR module dumping to IGV
         // Which is used in the test utils
         val irDumperExports = Map(
-          "jdk.internal.vm.compiler/org.graalvm.graphio" -> Seq(
+          "jdk.graal.compiler/jdk.graal.compiler.graphio" -> Seq(
             (`runtime-compiler-dump-igv` / javaModuleName).value
           )
         )
@@ -3101,6 +3103,7 @@ lazy val `runtime-integration-tests` =
     )
     .dependsOn(`runtime`)
     .dependsOn(`runtime-test-instruments`)
+    .dependsOn(`runtime-utils` % "test->compile")
     .dependsOn(`logging-service-logback` % "test->test")
     .dependsOn(`logging-service-telemetry` % "test->compile")
     .dependsOn(`logging-utils` % Test)
@@ -3120,14 +3123,13 @@ lazy val `runtime-benchmarks` =
       annotationProcSetting,
       // Note that withDebug command only makes sense if you use `@Fork(0)` in your benchmarks.
       commands += WithDebugCommand.withDebug,
-      libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.toolsPkgs ++ helidon ++ ioSentry ++ logbackPkg ++ Seq(
+      libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.toolsPkgs ++ helidon ++ ioSentry ++ logbackPkg ++ slf4jApi ++ Seq(
         "org.openjdk.jmh"     % "jmh-core"                     % jmhVersion,
         "org.openjdk.jmh"     % "jmh-generator-annprocess"     % jmhVersion,
         "jakarta.xml.bind"    % "jakarta.xml.bind-api"         % jaxbVersion,
         "com.sun.xml.bind"    % "jaxb-impl"                    % jaxbVersion,
         "org.graalvm.truffle" % "truffle-api"                  % graalMavenPackagesVersion,
         "org.graalvm.truffle" % "truffle-dsl-processor"        % graalMavenPackagesVersion % "provided",
-        "org.slf4j"           % "slf4j-api"                    % slf4jVersion,
         "org.slf4j"           % "slf4j-nop"                    % slf4jVersion,
         "org.netbeans.api"    % "org-netbeans-modules-sampler" % netbeansApiVersion
       ),
@@ -3140,12 +3142,11 @@ lazy val `runtime-benchmarks` =
       ),
       parallelExecution := false,
       Compile / moduleDependencies ++= {
-        GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ helidon ++ ioSentry ++ scalaReflect ++ Seq(
+        GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ helidon ++ ioSentry ++ scalaReflect ++ slf4jApi ++ Seq(
           "org.apache.commons"     % "commons-lang3"                % commonsLangVersion,
           "org.apache.commons"     % "commons-compress"             % commonsCompressVersion,
           "commons-io"             % "commons-io"                   % commonsIoVersion,
           "org.apache.tika"        % "tika-core"                    % tikaVersion,
-          "org.slf4j"              % "slf4j-api"                    % slf4jVersion,
           "org.slf4j"              % "slf4j-nop"                    % slf4jVersion,
           "org.netbeans.api"       % "org-openide-util-lookup"      % netbeansApiVersion,
           "org.netbeans.api"       % "org-netbeans-modules-sampler" % netbeansApiVersion,
@@ -3161,6 +3162,7 @@ lazy val `runtime-benchmarks` =
       },
       Compile / internalModuleDependencies := Seq(
         (`runtime` / Compile / exportedModule).value,
+        (`runtime-utils` / Compile / exportedModule).value,
         (`runtime-instrument-common` / Compile / exportedModule).value,
         (`runtime-instrument-runtime-server` / Compile / exportedModule).value,
         (`runtime-instrument-repl-debugger` / Compile / exportedModule).value,
@@ -3367,10 +3369,16 @@ lazy val `runtime-parser-processor-tests` =
 lazy val `runtime-parser-processor` =
   (project in file("engine/runtime-parser-processor"))
     .enablePlugins(JPMSPlugin)
+    .configs(Test)
     .settings(
       frgaalJavaCompilerSetting,
       javaMethodParametersSetting,
       publishLocalSetting,
+      libraryDependencies ++= Seq(
+        "junit"          % "junit"           % junitVersion    % Test,
+        "com.github.sbt" % "junit-interface" % junitIfVersion  % Test,
+        "org.hamcrest"   % "hamcrest-all"    % hamcrestVersion % Test
+      ),
       Compile / internalModuleDependencies := Seq(
         (`runtime-parser-dsl` / Compile / exportedModule).value
       )
@@ -3386,9 +3394,9 @@ lazy val `runtime-compiler` =
       scalaModuleDependencySetting,
       mixedJavaScalaProjectSetting,
       annotationProcSetting,
+      inConfig(Test)(truffleRunOptionsSettings),
       commands += WithDebugCommand.withDebug,
       javaModuleName := "org.enso.runtime.compiler",
-      (Test / fork) := true,
       libraryDependencies ++= Seq(
         "junit"                % "junit"                   % junitVersion              % Test,
         "com.github.sbt"       % "junit-interface"         % junitIfVersion            % Test,
@@ -3397,10 +3405,13 @@ lazy val `runtime-compiler` =
         "org.yaml"             % "snakeyaml"               % snakeyamlVersion          % Test,
         "com.typesafe"         % "config"                  % typesafeConfigVersion     % Test,
         "org.graalvm.polyglot" % "polyglot"                % graalMavenPackagesVersion % Test,
-        "org.hamcrest"         % "hamcrest-all"            % hamcrestVersion           % Test
+        "org.hamcrest"         % "hamcrest-all"            % hamcrestVersion           % Test,
+        "com.google.jimfs"     % "jimfs"                   % jimFsVersion              % Test
       ),
-      Compile / moduleDependencies ++= Seq(
-        "org.slf4j"        % "slf4j-api"               % slf4jVersion,
+      libraryDependencies ++= {
+        logbackPkg.map(_ % Test) ++ ioSentry.map(_ % Test)
+      },
+      Compile / moduleDependencies ++= slf4jApi ++ Seq(
         "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion
       ),
       Compile / internalModuleDependencies := Seq(
@@ -3413,8 +3424,10 @@ lazy val `runtime-compiler` =
         (`persistance` / Compile / exportedModule).value,
         (`editions` / Compile / exportedModule).value
       ),
-      Test / moduleDependencies := {
-        (Compile / moduleDependencies).value ++ scalaLibrary ++ scalaReflect ++ Seq(
+      Test / fork := true,
+      Test / javaOptions ++= testLogProviderOptions,
+      Test / moduleDependencies ++= {
+        (Compile / moduleDependencies).value ++ scalaLibrary ++ scalaReflect ++ logbackPkg ++ ioSentry ++ Seq(
           "org.apache.commons"   % "commons-compress" % commonsCompressVersion,
           "org.yaml"             % "snakeyaml"        % snakeyamlVersion,
           "com.typesafe"         % "config"           % typesafeConfigVersion,
@@ -3425,10 +3438,14 @@ lazy val `runtime-compiler` =
         val compileDeps = (Compile / internalModuleDependencies).value
         compileDeps ++ Seq(
           (Compile / exportedModule).value,
+          (`runtime-compiler-dump-igv` / Compile / exportedModule).value,
           (`scala-libs-wrapper` / Compile / exportedModule).value,
           (`version-output` / Compile / exportedModule).value,
           (`scala-yaml` / Compile / exportedModule).value,
           (`logging-config` / Compile / exportedModule).value,
+          (`logging-service` / Compile / exportedModule).value,
+          (`logging-service-logback` / Compile / exportedModule).value,
+          (`logging-service-logback` / Test / exportedModule).value,
           (`logging-utils` / Compile / exportedModule).value,
           (`semver` / Compile / exportedModule).value
         )
@@ -3450,13 +3467,20 @@ lazy val `runtime-compiler` =
         )
       },
       Test / addExports := {
-        val modName  = javaModuleName.value
+        // Add necessary exports for IR module dumping to IGV
+        // Which is used in the test utils
+        val irDumperExports = Map(
+          "jdk.graal.compiler/jdk.graal.compiler.graphio" -> Seq(
+            (`runtime-compiler-dump-igv` / javaModuleName).value
+          )
+        )
+
         val testPkgs = (Test / packages).value
         val testPkgsExports = testPkgs.map { pkg =>
-          modName + "/" + pkg -> Seq("ALL-UNNAMED")
+          (javaModuleName.value) + "/" + pkg -> Seq("ALL-UNNAMED")
         }.toMap
 
-        testPkgsExports
+        testPkgsExports ++ irDumperExports
       },
       Test / addReads := {
         Map(javaModuleName.value -> Seq("ALL-UNNAMED"))
@@ -3468,6 +3492,9 @@ lazy val `runtime-compiler` =
     .dependsOn(`engine-common`)
     .dependsOn(editions)
     .dependsOn(`persistance-dsl` % "provided")
+    .dependsOn(`runtime-compiler-dump-igv` % "test->compile")
+    .dependsOn(`logging-service-logback` % "test->test")
+    .dependsOn(`logging-service` % "test->compile")
 
 /** This project contains only a single service (interface) definition.
   */
@@ -3487,7 +3514,7 @@ lazy val `runtime-compiler-dump` =
     .dependsOn(`runtime-parser`)
 
 /** This is a standalone project that is not compiled with Frgaal on purpose.
-  * It depends on jdk.internal.vm.compiler module, which cannot be included in Frgaal.
+  * It depends on jdk.graal.compiler module, which cannot be included in Frgaal.
   * It includes a service provider for service definition in `runtime-compiler-dump`.
   */
 lazy val `runtime-compiler-dump-igv` =
@@ -3497,25 +3524,21 @@ lazy val `runtime-compiler-dump-igv` =
       scalaModuleDependencySetting,
       javaModuleName := "org.enso.runtime.compiler.dump.igv",
       Compile / internalModuleDependencies := {
-        val transitiveDeps =
-          (`runtime-compiler` / Compile / internalModuleDependencies).value
         Seq(
-          (`runtime-compiler` / Compile / exportedModule).value
-        ) ++ transitiveDeps
+          (`runtime-parser` / Compile / exportedModule).value,
+          (`runtime-compiler-dump` / Compile / exportedModule).value
+        )
       },
-      Compile / moduleDependencies ++= Seq(
-        "org.slf4j" % "slf4j-api" % slf4jVersion
-      ),
+      Compile / moduleDependencies ++= slf4jApi,
       Compile / addExports ++= {
         Map(
-          "jdk.internal.vm.compiler/org.graalvm.graphio" -> Seq(
+          "jdk.graal.compiler/jdk.graal.compiler.graphio" -> Seq(
             javaModuleName.value
           )
         )
       }
     )
     .dependsOn(`runtime-compiler-dump`)
-    .dependsOn(`runtime-compiler`)
 
 lazy val `runtime-suggestions` =
   (project in file("engine/runtime-suggestions"))
@@ -3564,13 +3587,12 @@ lazy val `runtime-instrument-common` =
         "org.scalatest" %% "scalatest"       % scalatestVersion % Test
       ),
       javaModuleName := "org.enso.runtime.instrument.common",
-      Compile / moduleDependencies ++= Seq(
+      Compile / moduleDependencies ++= slf4jApi ++ Seq(
         "org.graalvm.truffle"  % "truffle-api" % graalMavenPackagesVersion,
         "org.graalvm.polyglot" % "polyglot"    % graalMavenPackagesVersion,
         "org.graalvm.sdk"      % "collections" % graalMavenPackagesVersion,
         "org.graalvm.sdk"      % "nativeimage" % graalMavenPackagesVersion,
-        "org.graalvm.sdk"      % "word"        % graalMavenPackagesVersion,
-        "org.slf4j"            % "slf4j-api"   % slf4jVersion
+        "org.graalvm.sdk"      % "word"        % graalMavenPackagesVersion
       ),
       Compile / internalModuleDependencies := Seq(
         (`cli` / Compile / exportedModule).value,
@@ -3585,6 +3607,7 @@ lazy val `runtime-instrument-common` =
         (`runtime-compiler-dump` / Compile / exportedModule).value,
         (`runtime-parser` / Compile / exportedModule).value,
         (`runtime-suggestions` / Compile / exportedModule).value,
+        (`runtime-utils` / Compile / exportedModule).value,
         (`text-buffer` / Compile / exportedModule).value,
         (`pkg` / Compile / exportedModule).value,
         (`polyglot-api` / Compile / exportedModule).value,
@@ -3592,6 +3615,7 @@ lazy val `runtime-instrument-common` =
       )
     )
     .dependsOn(`refactoring-utils`)
+    .dependsOn(`runtime-utils`)
     .dependsOn(`runtime` % "compile->compile;runtime->runtime")
 
 lazy val `runtime-instrument-id-execution` =
@@ -3716,9 +3740,8 @@ lazy val `engine-runner-common` = project
       "commons-io"           % "commons-io"  % commonsIoVersion,
       "commons-cli"          % "commons-cli" % commonsCliVersion
     ),
-    Compile / moduleDependencies ++= Seq(
+    Compile / moduleDependencies ++= slf4jApi ++ Seq(
       "commons-cli" % "commons-cli" % commonsCliVersion,
-      "org.slf4j"   % "slf4j-api"   % slf4jVersion,
       "commons-io"  % "commons-io"  % commonsIoVersion
     ),
     Compile / internalModuleDependencies := Seq(
@@ -3751,7 +3774,7 @@ lazy val `engine-runner` = project
     Compile / run / mainClass := Some("org.enso.runner.Main"),
     commands += WithDebugCommand.withDebug,
     inConfig(Compile)(truffleRunOptionsSettings),
-    libraryDependencies ++= GraalVM.modules ++ jline ++ Seq(
+    libraryDependencies ++= GraalVM.modules ++ GraalVM.toolsPkgs ++ jline ++ Seq(
       "org.graalvm.polyglot"    % "polyglot"                % graalMavenPackagesVersion,
       "org.graalvm.sdk"         % "polyglot-tck"            % graalMavenPackagesVersion % Provided,
       "commons-cli"             % "commons-cli"             % commonsCliVersion,
@@ -3763,12 +3786,12 @@ lazy val `engine-runner` = project
     ),
     Compile / moduleDependencies ++=
       jline ++
+      slf4jApi ++
       Seq(
         "org.graalvm.polyglot" % "polyglot"    % graalMavenPackagesVersion,
         "org.graalvm.sdk"      % "nativeimage" % graalMavenPackagesVersion,
         "org.graalvm.sdk"      % "word"        % graalMavenPackagesVersion,
-        "commons-cli"          % "commons-cli" % commonsCliVersion,
-        "org.slf4j"            % "slf4j-api"   % slf4jVersion
+        "commons-cli"          % "commons-cli" % commonsCliVersion
       ),
     Compile / internalModuleDependencies := Seq(
       (`profiling-utils` / Compile / exportedModule).value,
@@ -3837,34 +3860,55 @@ lazy val `engine-runner` = project
           langServer ++
           epbLang
       ).distinct
-      val stdLibsJars =
-        `base-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `image-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `table-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `database-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `google-api-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath()) ++
-        `std-aws-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `std-microsoft-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath()) ++
-        `std-snowflake-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath()) ++
-        `std-tableau-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath())
+      def stdLibsJars = {
+        val log = streams.value.log
+        val base =
+          `base-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath())
+        if (GraalVM.EnsoLauncher.fast) {
+          log.info(
+            s"Skipping support for non-Standard.Base libraries in the image build as ${GraalVM.EnsoLauncher.VAR_NAME} env variable is ${GraalVM.EnsoLauncher.toString}"
+          )
+          base
+        } else {
+          base ++
+          `image-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
+          `table-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
+          `database-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `google-api-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `std-aws-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
+          `std-microsoft-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `std-snowflake-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `std-tableau-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath())
+        }
+      }
       core ++ stdLibsJars ++ extraNITestLibs.value
     },
     extraNITestLibs := Def.taskDyn {
       if (GraalVM.EnsoLauncher.test) Def.task {
-        Seq(
+        val baseHelpers =
           (`enso-test-java-helpers` / Compile / packageBin).value
-            .getAbsolutePath(),
+            .getAbsolutePath()
+        val snowHelpers =
           (`snowflake-test-java-helpers` / Compile / packageBin).value
             .getAbsolutePath()
-        )
+        if (GraalVM.EnsoLauncher.fast) {
+          Seq(baseHelpers)
+        } else {
+          Seq(
+            baseHelpers,
+            snowHelpers
+          )
+        }
       }
       else {
         Def.task {
@@ -3880,7 +3924,7 @@ lazy val `engine-runner` = project
       val NI_MODULES =
         "org.graalvm.nativeimage,org.graalvm.nativeimage.builder,org.graalvm.nativeimage.base,org.graalvm.nativeimage.driver,org.graalvm.nativeimage.librarysupport,org.graalvm.nativeimage.objectfile,org.graalvm.nativeimage.pointsto,com.oracle.graal.graal_enterprise,com.oracle.svm.svm_enterprise"
       val JDK_MODULES =
-        "java.desktop,java.naming,java.net.http,jdk.charsets,jdk.crypto.ec,jdk.localedata,jdk.httpserver,java.rmi"
+        "java.naming,java.net.http,jdk.charsets,jdk.crypto.ec,jdk.localedata,jdk.httpserver,java.rmi"
       val DEBUG_MODULES  = "jdk.jdwp.agent"
       val PYTHON_MODULES = "jdk.security.auth,java.naming"
 
@@ -3959,23 +4003,31 @@ lazy val `engine-runner` = project
               "-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.NoOpLog",
               "-H:+AddAllCharsets",
               "-H:+IncludeAllLocales",
+              "-H:+RunReachabilityHandlersConcurrently",
+              "-R:-InstallSegfaultHandler",
               // Workaround a problem with build-/runtime-initialization conflict
               // by disabling this service provider
               "-H:ServiceLoaderFeatureExcludeServiceProviders=net.snowflake.client.core.FileTypeDetector",
-              // useful perf & debug switches:
-              // "-g",
-              // "-H:+SourceLevelDebug",
-              // "-H:-DeleteLocalSymbols",
-              // you may need to set smallJdk := None to use following flags:
-              // "--trace-class-initialization=org.enso.syntax2.Parser",
-              // "--diagnostics-mode",
-              // "--verbose",
-              "-Dnic=nic",
               "-Dorg.enso.feature.native.lib.output=" + (engineDistributionRoot.value / "bin"),
               "-Dorg.sqlite.lib.exportPath=" + (engineDistributionRoot.value / "bin"),
               // Snowflake uses Apache Arrow (equivalent of #9664 in native-image setup)
               "--add-opens=java.base/java.nio=ALL-UNNAMED"
-            ),
+            ) ++ (if (GraalVM.EnsoLauncher.debug) {
+                    // useful perf & debug switches:
+                    Seq(
+                      "-g",
+                      "-O0",
+                      "-H:+SourceLevelDebug",
+                      "-H:-DeleteLocalSymbols",
+                      // you may need to set smallJdk := None to use following flags:
+                      // "--trace-class-initialization=org.enso.syntax2.Parser",
+                      // "--diagnostics-mode",
+                      // "--verbose",
+                      "-Dnic=nic"
+                    )
+                  } else {
+                    Seq()
+                  }),
             mainClass = Some("org.enso.runner.Main"),
             initializeAtRuntime = Seq(
               "org.apache",
@@ -4030,7 +4082,16 @@ lazy val `engine-runner` = project
           "enso",
           targetDir = engineDistributionRoot.value / "bin"
         )
-    }.value
+    }.value,
+    checkNativeImageSize := Def
+      .taskDyn {
+        NativeImage.checkNativeImageSize(
+          name      = "enso",
+          targetDir = engineDistributionRoot.value / "bin"
+        )
+      }
+      .dependsOn(buildNativeImage)
+      .value
   )
   .dependsOn(`version-output`)
   .dependsOn(pkg)
@@ -4151,9 +4212,8 @@ lazy val `distribution-manager` = project
       "commons-io"                  % "commons-io"    % commonsIoVersion,
       "org.scalatest"              %% "scalatest"     % scalatestVersion % Test
     ),
-    Compile / moduleDependencies ++= Seq(
-      "org.slf4j" % "slf4j-api" % slf4jVersion,
-      "org.yaml"  % "snakeyaml" % snakeyamlVersion
+    Compile / moduleDependencies ++= slf4jApi ++ Seq(
+      "org.yaml" % "snakeyaml" % snakeyamlVersion
     ),
     Compile / internalModuleDependencies := Seq(
       (`cli` / Compile / exportedModule).value,
@@ -4218,18 +4278,16 @@ lazy val `os-environment` =
     .in(file("lib/java/os-environment"))
     .enablePlugins(JPMSPlugin)
     .settings(
-      frgaalJavaCompilerSetting,
+      customFrgaalJavaCompilerSettings("24"),
       scalaModuleDependencySetting,
-      libraryDependencies ++= Seq(
+      libraryDependencies ++= slf4jApi ++ Seq(
         "org.graalvm.sdk" % "nativeimage"     % graalMavenPackagesVersion % "provided",
         "org.graalvm.sdk" % "graal-sdk"       % graalMavenPackagesVersion % "provided",
         "commons-io"      % "commons-io"      % commonsIoVersion,
-        "org.slf4j"       % "slf4j-api"       % slf4jVersion,
         "junit"           % "junit"           % junitVersion              % Test,
         "com.github.sbt"  % "junit-interface" % junitIfVersion            % Test
       ),
-      Compile / moduleDependencies ++= Seq(
-        "org.slf4j"            % "slf4j-api"   % slf4jVersion,
+      Compile / moduleDependencies ++= slf4jApi ++ Seq(
         "commons-io"           % "commons-io"  % commonsIoVersion,
         "org.graalvm.sdk"      % "nativeimage" % graalMavenPackagesVersion,
         "org.graalvm.polyglot" % "polyglot"    % graalMavenPackagesVersion,
@@ -4250,12 +4308,13 @@ lazy val `os-environment` =
         val targetDir = (Test / target).value
         NativeImage.buildNativeImage(
           "test-os-env",
-          staticOnLinux = true,
+          staticOnLinux = false,
           targetDir     = targetDir,
           mainClass     = Some("org.enso.os.environment.TestRunner"),
           additionalOptions = Seq(
             "-ea",
-            "--features=org.enso.os.environment.TestCollectorFeature"
+            "--features=org.enso.os.environment.TestCollectorFeature",
+            "-R:-InstallSegfaultHandler"
           )
         )
       }.value,
@@ -4266,7 +4325,7 @@ lazy val `os-environment` =
           val exeFile =
             (Test / target).value / ("test-os-env" + exeSuffix)
           val binPath = exeFile.getAbsolutePath
-          val res     = binPath ! logger
+          val res     = Process(Seq(binPath), None, "JAVA_OPTS" -> "") ! logger
           if (res != 0) {
             logger.error("Some test in os-environment failed")
             throw new TestsFailedException()
@@ -4336,11 +4395,10 @@ lazy val `std-benchmarks` = (project in file("std-bits/benchmarks"))
     frgaalShouldNotLimitModules := true,
     frgaalJavaCompilerSetting,
     annotationProcSetting,
-    libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.toolsPkgs ++ Seq(
+    libraryDependencies ++= GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.toolsPkgs ++ slf4jApi ++ Seq(
       "org.openjdk.jmh"      % "jmh-core"                 % jmhVersion,
       "org.openjdk.jmh"      % "jmh-generator-annprocess" % jmhVersion,
       "org.graalvm.polyglot" % "polyglot"                 % graalMavenPackagesVersion,
-      "org.slf4j"            % "slf4j-api"                % slf4jVersion,
       "org.slf4j"            % "slf4j-nop"                % slf4jVersion
     ),
     commands += WithDebugCommand.withDebug
@@ -4566,10 +4624,9 @@ lazy val downloader = (project in file("lib/scala/downloader"))
       "org.hamcrest"                % "hamcrest-all"     % hamcrestVersion  % Test
     ),
     javaModuleName := "org.enso.downloader",
-    Compile / moduleDependencies ++= Seq(
+    Compile / moduleDependencies ++= slf4jApi ++ Seq(
       "commons-io"         % "commons-io"       % commonsIoVersion,
-      "org.apache.commons" % "commons-compress" % commonsCompressVersion,
-      "org.slf4j"          % "slf4j-api"        % slf4jVersion
+      "org.apache.commons" % "commons-compress" % commonsCompressVersion
     ),
     Compile / internalModuleDependencies := Seq(
       (`cli` / Compile / exportedModule).value,
@@ -4627,9 +4684,8 @@ lazy val `library-manager` = project
       "org.scalatest"              %% "scalatest"     % scalatestVersion % Test
     ),
     javaModuleName := "org.enso.librarymanager",
-    Compile / moduleDependencies ++= Seq(
-      "org.yaml"  % "snakeyaml" % snakeyamlVersion,
-      "org.slf4j" % "slf4j-api" % slf4jVersion
+    Compile / moduleDependencies ++= slf4jApi ++ Seq(
+      "org.yaml" % "snakeyaml" % snakeyamlVersion
     ),
     Compile / internalModuleDependencies := Seq(
       (`distribution-manager` / Compile / exportedModule).value,
@@ -4720,10 +4776,9 @@ lazy val `runtime-version-manager` = project
       "org.apache.tika"             % "tika-core"        % tikaVersion,
       "org.scalatest"              %% "scalatest"        % scalatestVersion % Test
     ),
-    Compile / moduleDependencies ++= Seq(
+    Compile / moduleDependencies ++= slf4jApi ++ Seq(
       "org.apache.commons" % "commons-compress" % commonsCompressVersion,
-      "org.apache.tika"    % "tika-core"        % tikaVersion,
-      "org.slf4j"          % "slf4j-api"        % slf4jVersion
+      "org.apache.tika"    % "tika-core"        % tikaVersion
     ),
     Compile / internalModuleDependencies := Seq(
       (`cli` / Compile / exportedModule).value,
@@ -4767,6 +4822,7 @@ lazy val `process-utils` = project
     scalaModuleDependencySetting,
     compileOrder := CompileOrder.ScalaThenJava
   )
+  .dependsOn(`runtime-utils`)
 
 lazy val `locking-test-helper` = project
   .in(file("lib/scala/locking-test-helper"))
@@ -4995,6 +5051,11 @@ lazy val `std-table` = project
       "org.mockito"              % "mockito-core"            % mockitoJavaVersion        % Test,
       "org.mockito"              % "mockito-junit-jupiter"   % mockitoJavaVersion        % Test
     ),
+    Compile / unmanagedJars := {
+      Seq(
+        Attributed.blank((`poi-wrapper` / assembly).value)
+      )
+    },
     Compile / packageBin := {
       val result            = (Compile / packageBin).value
       val cacheStoreFactory = streams.value.cacheStoreFactory
@@ -5005,13 +5066,21 @@ lazy val `std-table` = project
           ignoreScalaLibrary = true,
           libraryUpdates     = (Compile / update).value,
           unmanagedClasspath = (Compile / unmanagedJars).value,
-          logger             = streams.value.log,
-          cacheStoreFactory  = cacheStoreFactory,
-          previousRun        = None
+          ignoreDependencies = Some(
+            Seq(
+              "org.apache.poi" % "poi"            % poiOoxmlVersion,
+              "org.apache.poi" % "poi-ooxml"      % poiOoxmlVersion,
+              "org.apache.poi" % "poi-ooxml-lite" % poiOoxmlVersion
+            )
+          ),
+          logger            = streams.value.log,
+          cacheStoreFactory = cacheStoreFactory,
+          previousRun       = None
         )
       result
     }
   )
+  .dependsOn(`poi-wrapper`)
   .dependsOn(`std-base` % "provided")
 
 lazy val extractNativeLibs = taskKey[AnalysisOfExtractedNativeLibs](
@@ -5050,7 +5119,8 @@ lazy val `std-image` = project
           `image-polyglot-root`,
           Seq("std-image.jar", "opencv.jar"),
           ignoreScalaLibrary = true,
-          ignoreDependency   = Some("org.openpnp" % "opencv" % opencvVersion),
+          ignoreDependencies =
+            Some(Seq("org.openpnp" % "opencv" % opencvVersion)),
           libraryUpdates     = (Compile / update).value,
           logger             = logger,
           cacheStoreFactory  = cacheStoreFactory,
@@ -5454,8 +5524,7 @@ lazy val `std-tableau` = project
     Compile / packageBin / artifactPath :=
       `std-tableau-polyglot-root` / "std-tableau.jar",
     libraryDependencies ++= Seq(
-      "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion % "provided",
-      "net.java.dev.jna" % "jna-platform"            % jnaVersion
+      "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion % "provided"
     ),
     // Extract native libraries from tableau's jar, and put them under
     // Standard/Tableau/polyglot/lib directory.
@@ -5484,13 +5553,13 @@ lazy val `std-tableau` = project
           unmanagedClasspath = unmanagedClasspath,
           previousRun        = prev
         )
-
       StdBits
         .extractNativeLibsFromTableau(
           `std-tableau-polyglot-root`,
           `std-tableau-native-libs`,
           tableauVersion,
           jnaVersion,
+          (`jna-wrapper` / Compile / exportedModule).value,
           updateReport       = libraryUpdates,
           unmanagedClasspath = unmanagedClasspath,
           logger             = logger,
@@ -5637,6 +5706,7 @@ buildEngineDistributionNoIndex := Def.taskIf {
   createEnginePackageNoIndex.value
   if (shouldBuildNativeImage.value) {
     (`engine-runner` / buildNativeImage).value
+    (`engine-runner` / checkNativeImageSize).value
   }
 }.value
 
@@ -5660,7 +5730,9 @@ ThisBuild / NativeImage.additionalOpts := {
     Seq()
   } else {
     var opts = if (GraalVM.EnsoLauncher.release) {
-      Seq("-O3")
+      // Picking `-Os` option instead of `-O3` in production on purpose.
+      // See https://github.com/enso-org/enso/pull/12855#issuecomment-2812552448
+      Seq("-Os")
     } else {
       Seq("-Ob")
     }
@@ -5703,6 +5775,32 @@ runEngineDistribution := {
     args,
     streams.value.log
   )
+}
+
+lazy val lintEnso =
+  inputKey[Unit](
+    "Run Enso linter on one or many projects. If no arguments are specified, all projects are linted. Otherwise, the argument should be the full path or just the name of the project to lint."
+  )
+lintEnso := {
+  buildEngineDistributionNoIndex.value
+  val fileTree = fileTreeView.value
+
+  val args: Seq[String] = spaceDelimited("<arg>").parsed
+  val whatToLint = args match {
+    case Seq()     => EnsoLint.LintTarget.All
+    case Seq(name) => EnsoLint.LintTarget.FindByName(name)
+    case _ =>
+      throw new IllegalArgumentException(
+        "At most one argument to lintEnso expected."
+      )
+  }
+
+  val linter = new EnsoLint(
+    baseDirectory.value,
+    engineDistributionRoot.value,
+    streams.value.log
+  )
+  linter.check(whatToLint)
 }
 
 lazy val buildProjectManagerDistributionCond =
@@ -5938,7 +6036,7 @@ updateLibraryManifests := {
   val runtimeCp  = (`runtime` / Runtime / fullClasspath).value
   val fullCp     = (runnerCp ++ runtimeCp).distinct
   val modulePath = componentModulesPaths.value
-  val javaOpts = Seq(
+  val javaOpts = (ThisBuild / javaOptions).value ++ Seq(
     "--module-path",
     modulePath.map(_.getAbsolutePath).mkString(File.pathSeparator),
     "-m",
